back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back-container
        image: ehdwn15100/backend:2.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "500Mi"
            cpu: 1500m
          limits:
            memory: "1000Mi"
            cpu: 2000m
