front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front-container
        image: 752518105514.dkr.ecr.ap-northeast-2.amazonaws.com/kakaoasset-frontend:549653e6e5e4026ef4eede09846d3a1daae10bf3
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "1000Mi"
            cpu: 1500m
          limits:
            memory: "2000Mi"
            cpu: 2000m
