back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: back
  name: back
spec:
  selector:
    app: back
  ports:
  - targetPort: 8080  
    port: 8080
