front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: front
  name: front-svc
spec:
  selector:
    app: front
  type: NodePort
  ports:
  - targetPort: 3000  
    port: 3000
    nodePort: 30003
